# MobileRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  requirements.txt
apps/chat_api/: main.py
apps/chat_ui/: package.json
configs/: mobile_rag.yaml
core/: types.py
core/clip/: blip.py  openclip.py
core/config/: devices.py  settings.py
core/generator/: __init__.py  budget.py  formatter.py  llm.py
core/graph/: topology.py
core/history/: __init__.py  compactor.py  store.py
core/ingest/: __init__.py  caption.py  chunk.py  embed_dense.py  embed_image.py  embed_sparse.py  pipeline.py  scan.py  upsert.py
core/memory/: __init__.py  gate.py  store.py  types.py
core/reranker/: reranker.py
core/retriever/: hybrid.py  types.py
core/sparse/: fastembed.py
core/utils/: tokens.py
core/vecdb/: client.py  schema.py
docs/: 00_Todo_Impl.md  01_Design_Spec.md  02_Integration_Plan.md
scripts/: eval_cli.py  ingest_cli.py  smoke_cli.py
src/: __init__.py  config.py  main.py
src/api/: server.py
src/chat/: build_messages.py  cli.py  events.py  system_prompt.py  think_split.py
src/clients/: ws_client.py
src/models/: base.py  ollama.py  registry.py
src/rag/: __init__.py  chunker.py  embedder.py  fs_scan.py  index_sqlite.py  parsers.py  pipeline.py  rerank.py  types.py  vector_index.py
src/storage/: history_db.py  persist.py
tests/: rerank_dataset.json  rerank_report.json
tests/contract/: test_answer_formatter.py  test_vecdb.py  test_vecdb_upsert.py
tests/integration/: test_agent_memory.py  (+2 more)
(+35 files in other folders)
